<resources>
    <string name="app_name">Punktozercy</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register Now</string>
    <string name="textUnderLogin1">Don\'t have account?"</string>
    <string name="email">E-mail</string>
    <string name="username">Username</string>
    <string name="phone">Phone</string>
    <string name="rules">By signing up, you\'re agree to our</string>
    <string name="terms_cond">Terms &amp; Conditions</string>
    <string name="privacy"> Privacy Policy</string>
    <string name="and">and</string>
    <string name="password_repeat">Repeat password</string>
    <string name="password_f">Forget Password?</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="continue_button">Continue</string>
    <string name="under_continue">Already have account?</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- Bottom navigation bar strings -->
    <string name="bottom_nav_bar_home">Home</string>
    <string name="bottom_nav_bar_basket">Basket</string>
    <string name="bottom_nav_bar_history">Shopping History</string>
    <string name="bottom_nav_bar_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theme">Theme</string>
    <string name="sounds">Sounds</string>
    <string name="notifications">Notifications</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="send_points">Send points</string>
    <string name="settings">Settings</string>
    <string name="points">Points</string>
    <string name="address">Address</string>
    <string name="save_changes">Save changes</string>
    <string name="back">Back</string>
    <string name="available_points">Available Points</string>
    <string name="amount_of_points_you_want_to_send_him">Amount of points you want to send him</string>
    <string name="enter_the_email_of_your_friend">Enter the email of your friend</string>
    <string name="e_mail">E-mail</string>
    <string name="buy">BUY</string>
    <string name="price_in_z_0z">Price in zł: 0zł</string>
    <string name="buy_with_money">Buy with money</string>
    <string name="with_delivery_200zl">With delivery: 0</string>
    <string name="delivery_price_10zl">Delivery price: 10zl</string>
    <string name="_1">1</string>
    <string name="price_in_points">Price in points:</string>
    <string name="price_in_z">Price in zł:</string>
    <string name="siema">SIEMA</string>


</resources>