<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/navigation_bottom_bar_home"
        android:title="@string/bottom_nav_bar_home" />

    <item
        android:id="@+id/navigation_basket"
        android:icon="@drawable/navigation_bottom_bar_basket"
        android:title="@string/bottom_nav_bar_basket" />

    <item
        android:id="@+id/navigation_shopping_history"
        android:icon="@drawable/navigation_bottom_bar_history"
        android:title="@string/bottom_nav_bar_history" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/navigation_bottom_bar_settings"
        android:title="@string/bottom_nav_bar_settings" />

</menu>