<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.login.LoginFragment">

    <Button
        android:id="@+id/button1"
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="220dp"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="362dp"
        android:layout_height="48dp"
        android:layout_marginTop="264dp"
        android:layout_marginEnd="24dp"

        android:autofillHints="email"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/et_custom"
        android:padding="12dp"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="362dp"
        android:layout_height="48dp"
        android:layout_marginTop="364dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/et_custom"
        android:padding="12dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="300dp"
        android:layout_height="39dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="164dp"
        android:text="@string/textUnderLogin1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="184dp"
        android:text="@string/register"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>