<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.register.RegisterFragment"
    android:background="@drawable/gradient_background">

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:autofillHints="email"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_email_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="12dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextUsername" />

    <EditText
        android:id="@+id/TextRepeatPassword"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="264dp"
        android:autofillHints="password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password_repeat"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="12dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_password_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="12dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/TextPhone"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints="password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_phone_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLines="1"
        android:padding="12dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextRepeatPassword"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/TextUsername"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:autofillHints="password"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_user_icon"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:textCursorDrawable="@drawable/custom_cursor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <ImageView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="61dp"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.008"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.198" />

    <Button
        android:id="@+id/button1"
        android:layout_width="362dp"
        android:layout_height="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="#555555"
        android:text="@string/continue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/privacyPolicyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy"
        android:textColor="#648ade"
        android:layout_marginLeft="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="350dp"
        android:layout_height="35dp"
        android:text="@string/rules"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.807" />

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="53dp"
        android:layout_height="21dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="4dp"
        android:text="@string/login_text"
        android:textColor="#648ade"
        app:layout_constraintBottom_toBottomOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.947" />

    <TextView
        android:id="@+id/termsAndConditionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_cond"
        android:textColor="#648ade"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="0.5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.793" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/and"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="26dp"
        android:layout_marginBottom="20dp"
        android:text="@string/under_continue"
        android:textColor="#ffffff"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintVertical_bias="0.391" />

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="237dp"
        android:layout_height="206dp"
        android:layout_marginStart="164dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.013" />

</androidx.constraintlayout.widget.ConstraintLayout>