<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.punktozercy.fragments.home.HomeFragment"
        android:label="@string/bottom_nav_bar_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_productsListFragment"
            app:destination="@id/productsListFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_basket"
        android:name="com.example.punktozercy.fragments.basket.BasketFragment"
        android:label="@string/bottom_nav_bar_basket"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_shopping_history"
        android:name="com.example.punktozercy.fragments.history.HistoryFragment"
        android:label="@string/bottom_nav_bar_history"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.punktozercy.fragments.settings.SettingsFragment"
        android:label="@string/bottom_nav_bar_settings"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_navigation_settings_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
        <action
            android:id="@+id/action_navigation_settings_to_sendPointsFragment"
            app:destination="@id/sendPointsFragment" />
    </fragment>
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.example.punktozercy.fragments.settings.EditProfileFragment"
        android:label="fragment_edit_profile"
        tools:layout="@layout/fragment_edit_profile" >
        <action
            android:id="@+id/action_editProfileFragment_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/sendPointsFragment"
        android:name="com.example.punktozercy.fragments.settings.SendPointsFragment"
        android:label="fragment_send_points"
        tools:layout="@layout/fragment_send_points" >
        <action
            android:id="@+id/action_sendPointsFragment_to_navigation_settings"
            app:destination="@id/navigation_settings" />
    </fragment>
    <fragment
        android:id="@+id/productsListFragment"
        android:name="com.example.punktozercy.fragments.home.productslist.ProductsListFragment"
        android:label="fragment_products_list"
        tools:layout="@layout/fragment_products_list" >
        <action
            android:id="@+id/action_productsListFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>