<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.settings.EditProfileFragment"
    android:background="@drawable/gradient_background">

        <ImageView
            android:layout_width="277dp"
            android:layout_height="180dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/textView"
            android:layout_width="191dp"
            android:layout_height="84dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="180dp"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/edit_profile_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/TextEmailAddress"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints="email"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextUsername" />

        <EditText
            android:id="@+id/TextRepeatPassword"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints="password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password_repeat"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextPassword" />

        <EditText
            android:id="@+id/TextPassword"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints="password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_password_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Address" />

        <EditText
            android:id="@+id/TextPhone"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints="password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextEmailAddress" />

        <EditText
            android:id="@+id/TextUsername"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginTop="240dp"
            android:autofillHints="password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_user_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Address"
            android:layout_width="330dp"
            android:layout_height="48dp"
            android:layout_marginTop="24dp"
            android:autofillHints="password"
            android:background="@drawable/custom_input"
            android:drawableStart="@drawable/custom_phone_icon"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:textCursorDrawable="@drawable/custom_cursor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.481"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TextPhone" />

        <Button
            android:id="@+id/save"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="#555555"
            android:text="@string/save_changes"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/back"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="64dp"
            android:backgroundTint="#555555"
            android:text="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.173"
            app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>



